--- a/README
+++ b/README
@@ -10,3 +10,5 @@ lată compresia.
 
 Exemplu: decomprimat1_3000.ppm este decompresia fișierului 
 comprimat1_3000.out
+
+pentru detalii de implementare verifica README2.md
